# nhl-api

./: .gitignore  BACKPORT_PLAN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: add-endpoint.md  add-example.md  add-tests.md  api-research.md  benchmark.md  check-all.md  compare-api.md  fix-clippy.md  release-prep.md  test-module.md  update-docs.md
src/: client.rs  config.rs  date.rs  error.rs  fixtures.rs  http_client.rs  ids.rs  lib.rs  types.rs
src/types/: boxscore.rs  club_stats.rs  common.rs  enums.rs  game_center.rs  game_state.rs  game_type.rs  mod.rs  player.rs  schedule.rs  standings.rs
src/types/edge/: common.rs  goalie.rs  mod.rs  skater.rs  team.rs
src/types/enums/: game_enums.rs  macros.rs  mod.rs  player_enums.rs
tests/: play_by_play_integration.rs
