[package]
name = "nhl_api"
version = "0.6.0"
edition = "2021"
description = "An NHL stats and scores API client"
license = "GPL-3.0-or-later"
repository = "https://github.com/sperano/nhl-api"
homepage = "https://github.com/sperano/nhl-api"
documentation = "https://docs.rs/nhl-api"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mockito = "1.5"
